--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
     "start": "next start"
   },
   "dependencies": {
-    "bootstrap": "^4.4.1",
     "next": "latest",
     "react": "^17.0.2",
-    "react-bootstrap": "^1.0.1",
+    "styled-components": "^5.3.5",
+    "react-router-dom": "^6.3.0",
     "react-dom": "^17.0.2"
   }
 }
