--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
   "dependencies": {
     "next": "latest",
     "react": "^17.0.2",
-    "styled-components": "^5.3.5",
+    "react-dom": "^17.0.2",
+    "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
-    "react-dom": "^17.0.2"
+    "react-scroll": "^1.8.7",
+    "styled-components": "^5.3.5"
   }
 }
