--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
     "react-scroll": "^1.8.7",
+    "react-stars": "^2.2.5",
     "styled-components": "^5.3.5"
   }
 }
