--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./bin/server.js"
+    "start": "node ./bin/server.js",
+    "dev": "nodemon ./bin/server.js"
   },
   "author": "",
   "license": "ISC",
@@ -15,7 +16,9 @@
     "debug": "^4.3.4",
     "express": "^4.18.1",
     "http": "^0.0.1-security",
-    "mongoose": "^6.4.3"
+    "mongoose": "^6.4.3",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
