--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.0",
+    "cors": "^2.8.5",
     "debug": "^4.3.4",
     "express": "^4.18.1",
     "http": "^0.0.1-security",
